[Fix] Fix a minor error in yml

--- a/.github/workflows/update_paper_links.yml
+++ b/.github/workflows/update_paper_links.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "Github Action Automatic Update Quant Arxiv Scholar Paper List"
-          files: README.md docs/quant-arxiv-daily.json
+          files: README.md docs/quant-scholar.json
           rebase: 'true'
           name: ${{ env.GITHUB_USER_NAME }}
           email: ${{ env.GITHUB_USER_EMAIL }}
