--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 CMakeLists.txt.user
 CMakeLists_modified.txt
 
+.env
 
 build/
+*.egg-info
 
 lib/
 bin/
@@ -14,3 +16,6 @@ cmake-build-debug/
 *.pyc
 log/
 papers/
+
+data/
+*.html
