--- a/.github/workflows/quant_scholar.yml
+++ b/.github/workflows/quant_scholar.yml
@@ -25,6 +25,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          repository: LLMQuant/quant-scholar
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
         
       - name: Set up Python Env
         uses: actions/setup-python@v4
