--- a/.github/workflows/quant_scholar.yml
+++ b/.github/workflows/quant_scholar.yml
@@ -19,38 +19,37 @@ env:
   
 jobs:
   build:
-    name: update
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          repository: LLMQuant/quant-scholar
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
-        
+
       - name: Set up Python Env
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install arxiv
-          pip install requests
-          pip install pyyaml
-          
+          pip install arxiv requests pyyaml
+
       - name: Run quant_scholar.py
         run: |
           python quant_scholar.py
           cp README.md wiki/index.md
-          
-      - name: Push update the quant scholar paper list
-        uses: github-actions-x/commit@v2.9
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "[Workflow] Automatic Update Quant Scholar Paper List"
-          files: README.md docs/quant-scholar.json wiki/index.md
-          rebase: 'true'
-          name: ${{ env.GITHUB_USER_NAME }}
-          email: ${{ env.GITHUB_USER_EMAIL }}
+
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+      - name: Commit and Push
+        run: |
+          git config --global user.name "${{ env.GITHUB_USER_NAME }}"
+          git config --global user.email "${{ env.GITHUB_USER_EMAIL }}"
+          git add README.md docs/quant-scholar.json wiki/index.md
+          git commit -m "[Workflow] Automatic Update Quant Scholar Paper List" || echo "No changes to commit"
+          git push
