--- a/.github/workflows/quant_scholar.yml
+++ b/.github/workflows/quant_scholar.yml
@@ -49,19 +49,13 @@ jobs:
           git config --global user.name "${{ env.GITHUB_USER_NAME }}"
           git config --global user.email "${{ env.GITHUB_USER_EMAIL }}"
 
-      # - name: Install GitHub CLI
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y gh
-
       - name: Pull latest changes
         run: |
+          git fetch origin master
           git pull --rebase origin master
 
       - name: Commit and Push
         run: |
-          git config --global user.name "${{ env.GITHUB_USER_NAME }}"
-          git config --global user.email "${{ env.GITHUB_USER_EMAIL }}"
           git add README.md docs/quant-scholar.json wiki/index.md
           git commit -m "[Workflow] Automatic Update Quant Scholar Paper List" || echo "No changes to commit"
           git push origin HEAD:master
