--- a/.github/workflows/update_paper_links.yml
+++ b/.github/workflows/update_paper_links.yml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron:  "0 2 * * 1"
+    # run every Monday at 2:00 AM
 
 env:
   GITHUB_USER_NAME: WinstonLiyte
@@ -18,6 +19,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
         
       - name: Set up Python Env
         uses: actions/setup-python@v4
@@ -34,13 +37,6 @@ jobs:
         run: |
           python quant_scholar.py --update_paper_links
           cp README.md wiki/index.md
-
-      - name: Set up SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
           
       - name: Commit and Push
         run: |
