feat(source): duckduckgo as search engine source

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dependencies = [
     "httpx[socks]>=0.28.1",
     "litellm>=1.74.0.post1",
     "jinja2>=3.0.0",
+    "ddgs",
 ]
 
 [project.scripts]
